<resources>
    <!--General-->
    <string name="app_name">SLB4U</string>
    <string name="error">There was an error: </string>
    <string name="currentUser">currentUser</string>

    <!--Shared prefs-->
    <string name="prefs_name">pmdfinal_prefs</string>
    <string name="prefs_lastUser">lastUser</string>

    <!--Welcome-->
    <string name="welcome_title">SLB4U</string>
    <string name="welcome_login">Email</string>
    <string name="welcome_pwd">Password</string>
    <string name="welcome_login_btn">Login</string>
    <string name="welcome_register_btn">Register</string>
    <string name="welcome_message">Welcome</string>
    <string name="forgot_username">You did not fill in a username</string>
    <string name="forgot_password">You did not fill in a password</string>
    <string name="login_success">Login successful</string>
    <string name="login_fail">Incorrect credentials</string>
    <string name="no_users">There are no registered users!</string>

    <!--Register-->
    <string name="register_title">Create an account</string>
    <string name="register_name">Email</string>
    <string name="register_pwd">Password</string>
    <string name="register_pwd_confirm">Confirm password</string>
    <string name="register_button">Register</string>

    <!--Notifications-->
    <string name="register_toast_user_exists">This email is already in use</string>
    <string name="register_toast_invalid_mail">Please enter a valid email address</string>
    <string name="register_toast_short_pwd">Password needs at least 8 characters</string>
    <string name="register_toast_pwd_match">Passwords don\'t match</string>
    <string name="register_toast_success">Registry successful! You can now login</string>

    <!--Home-->
    <string name="home_welcome">Welcome</string>
    <string name="home_intro">Here you can see your personal study progress!</string>
    <string name="home_btn_tutorial">Help &#38; Backup</string>
    <string name="home_btn_courses">My Courses</string>
    <string name="home_btn_graph">Progress</string>
    <string name="home_btn_optional">Change Optional Courses</string>
    <string name="home_btn_fill">Fill Database</string>
    <string name="home_toast_json_success">JSON has successfully received</string>
    <string name="home_toast_db_exists">The DB is already filled</string>


    <!--Tutorial-->
    <string name="tutorial_intro">You can set grades for completed courses and add notes</string>
    <string name="tutorial_extra">Besides that, you can add optional courses</string>
    <string name="tutorial_graph">In the Progress screen you can see a graph of your progress</string>
    <string name="tutorial_latestBackup">Your latest backup was at:</string>
    <string name="tutorial_restore">If you want a backup restored please contact the help service</string>
    <string name="tutorial_email">help@slb4u.com</string>
    <string name="tutorial_backupBtn">Backup Now</string>
    <string name="tutorial_noBackup">Never</string>

    <!--CourseList-->
    <string name="courseList_isopt0">Mandatory</string>
    <string name="courseList_isopt1">Optional Course</string>
    <string name="courseList_blank_grade">No grade known</string>
    <string name="courseList_year">Year </string>
    <string name="courseList_period">Period </string>

    <string name="courseOpt_active">You started the course </string>
    <string name="courseOpt_inactive">You stopped the course </string>
    <string name="courseOpt_following">ACTIVE</string>
    <string name="courseOpt_notFollowing">Sign up?</string>

    <!--CourseView-->
    <string name="courseView_saveBtn">Save</string>
    <string name="courseView_grade">Grade: </string>
    <string name="courseView_credits">Credits: </string>
    <string name="courseView_year">Year: </string>
    <string name="courseView_period">Period: </string>
    <string name="courseView_notes">Notes: </string>
    <string name="courseView_blankNotes">You have no notes</string>

    <string name="courseEdit_notesHint">Insert some useful text (max 140 char.)</string>
    <string name="courseEdit_gradeHint">0.0</string>
    <string name="courseEdit_toast_noDouble">Please only enter numbers</string>
    <string name="courseEdit_toast_noGrade">Only grades between 1 and 10 are valid</string>

    <!--Graph-->
    <string name="graph_description">Progress until your Diploma</string>
    <string name="graph_completed">Mandatory</string>
    <string name="graph_extra_completed">Optional</string>
    <string name="graph_remaining">Remaining</string>
    <string name="graph_toast_tooManyOpt">You have completed more then 4 optional courses: only a max of 12 ECTS are usable.</string>
    <string name="graph_toast_allPoints">Congratulations! Enjoy a life of responsibilities</string>


</resources>
